# dcql-sparql-rs

./: .gitignore  Cargo.toml  DESIGN.md  PLAN.md  README.md
examples/: basic.rs  cross_join.rs  trust_chain.rs
src/: error.rs  lib.rs  matcher.rs
src/model/: dcql.rs  extended.rs  mod.rs
src/sparql/: builder.rs  mod.rs  translator.rs
src/validation/: dcql.rs  mod.rs  sparql.rs
tests/: cross_credential.rs  sparql_translation.rs  validation.rs
