[package]
name = "dcql-plus-to-sparql-rs"
version = "0.1.0"
edition = "2021"
description = "Extended DCQL query language with cross-credential matching and SPARQL translation"
license = "Apache-2.0"
keywords = ["dcql", "credentials", "sparql", "openid4vp", "rdf"]
categories = ["encoding", "web-programming"]
repository = "https://github.com/vpavlyshyn/dcql-plus-to-sparql-rs"
documentation = "https://docs.rs/dcql-plus-to-sparql-rs"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"
